feat: bring your own Supabase backend + auth UX improvements
- Add dynamic Supabase configuration (no bundled keys)
- Organization Code system for easy team onboarding
- SetupScreen for first-time configuration
- Admin-only vault creation with RLS policies
- Connecting spinner after sign-in
- Fix paste in Electron input fields (Edit menu roles)
- Fix user/vault visibility RLS policies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blue-pdm",
-  "version": "0.10.2",
+  "version": "0.11.0",
   "description": "Product Data Management for engineering teams",
   "main": "dist-electron/main.js",
   "scripts": {
@@ -76,8 +76,9 @@
       "target": "AppImage"
     },
     "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true
+      "oneClick": true,
+      "perMachine": false,
+      "deleteAppDataOnUninstall": true
     }
   }
 }
