feat: SolidWorks Document Manager API integration
- Add Document Manager API for instant file operations without launching SW
- Org-wide DM license key stored in Supabase (admin configurable)
- Read/write properties, BOM, configs, references without SW
- High-res preview extraction via DM API
- SW only launches for exports and mass properties

Operations with DM key (instant):
- getBom, getProperties, setProperties
- getConfigurations, getReferences, getPreview

Operations requiring SW (slower):
- getMassProperties, exports (PDF/STEP/DXF), packAndGo

Also includes:
- Backup system with restic integration
- Command executor and terminal
- CLI tool for server-side operations
- Pending files view, system stats

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Download restic binary
+        run: npm run download-restic -- --current
+
       - name: Build Electron app
         run: npm run build
         env:
@@ -48,6 +51,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Download restic binary
+        run: npm run download-restic -- --current
 
       - name: Build Electron app
         run: npm run build
