refactor(settings): reorganize settings navigation and cleanup dead code
- Rename 'Branding & RFQ' to 'Company Profile' in settings nav
- Add separate 'RFQ Settings' tab for RFQ template configuration
- Create CompanyProfileSettings.tsx (logo, address, contact info)
- Create RFQSettings.tsx (payment terms, incoterms, columns, T&C)
- Delete unused SettingsModal.tsx (~3700 lines of dead code)
- Delete BrandingSettings.tsx (replaced by above components)
- Replace deprecated_SettingsModal with minimal LogsModal (~300 lines)
- Update WelcomeScreen to use simple 'View Logs' link
- Split integrations into separate settings components

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,6 +9,10 @@
 
 FROM node:20-alpine
 
+# Build arg for git commit SHA (passed from CI)
+ARG GIT_COMMIT_SHA
+ENV BUILD_COMMIT_SHA=${GIT_COMMIT_SHA}
+
 WORKDIR /app
 
 # Install dependencies first (for caching)
