fix: correct GitHub repo URLs to bluerobotics/bluePLM v2.2.1

--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bluepdm-api",
   "version": "1.0.0",
-  "description": "BluePDM REST API",
+  "description": "BluePLM REST API",
   "type": "module",
   "main": "server.ts",
   "scripts": {
