fix: ensure loading spinners show on vault files during download
- ExplorerView: use isBeingProcessed() for vault-level spinner check to ensure path normalization consistency
- FileBrowser: update memo comparison to check parent folder processing status, matching isProcessing logic
- download handler: increase yield timeout to 16ms to give React time to render spinners before downloads start
- package.json: use icon.png for Mac builds (icon.icns doesn't exist)

--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
         }
       ],
       "category": "public.app-category.developer-tools",
-      "icon": "assets/icon.icns",
+      "icon": "assets/icon.png",
       "extraResources": [
         {
           "from": "resources/bin/darwin-${arch}",
