feat: add Sentry error tracking with user consent
- Add @sentry/electron for crash reporting and error tracking
- Create src/lib/analytics.ts for Sentry initialization
- Update onboarding to ask for 'usage statistics' consent (improved wording)
- Add Privacy section in Settings > Preferences with toggle
- Sync analytics preference between renderer and main process via IPC
- Default to enabled for new users (can opt-out during onboarding)
- Show status indicator for analytics state in settings

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fastify/rate-limit": "^10.2.1",
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.1",
+    "@sentry/electron": "^7.5.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.14.0",
     "@tanstack/react-table": "^8.11.0",
