--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blue-plm",
-  "version": "2.16.4",
+  "version": "2.16.5",
   "description": "Product Lifecycle Management for everyone who builds",
   "main": "dist-electron/main.js",
   "scripts": {
@@ -16,9 +16,9 @@
     "api": "npx tsx api/server.ts",
     "api:dev": "npx tsx --watch api/server.ts",
     "api:build": "npx tsc api/server.ts --outDir dist-api --esModuleInterop --module commonjs --target ES2020",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:dev": "cd docs && npm run dev",
+    "docs:build": "cd docs && npm run build",
+    "docs:preview": "cd docs && npm run preview"
   },
   "dependencies": {
     "@fastify/cors": "^10.0.2",
@@ -44,7 +44,6 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
-    "vitepress": "^1.5.0",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
     "@vitejs/plugin-react": "^4.3.4",
