--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -27,12 +27,15 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+          cache-dependency-path: docs/package-lock.json
 
       - name: Install docs dependencies
-        run: cd docs && npm ci
+        working-directory: docs
+        run: npm ci
 
       - name: Build docs
-        run: cd docs && npm run build
+        working-directory: docs
+        run: npm run build
 
       - name: Deploy to Cloudflare Pages
         uses: cloudflare/wrangler-action@v3
